@@ -5,6 +5,7 @@ ipython (0.13.1-3) experimental; urgency=low
   * don't link documentation of ipython-doc so ipython3 does not depend on
     ipython (Closes: #695554)
     Requires ipython-doc.preinst to not lose copyright on upgrade
+  * add ipython3 and ipython3-qtconsole desktop files (Closes: #693612)
 
  -- Julian Taylor <jtaylor.debian@googlemail.com>  Sat, 02 Feb 2013 11:14:27 +0100
 
